--- a/search.html
+++ b/search.html
@@ -13,17 +13,26 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <link rel="stylesheet" href="./css/bottom_navigation.css" />
+
     <style>
       body {
         font-family: "Poppins", sans-serif;
+        background-color: #fffaf0; /* Warm White/Cream */
+      }
+
+      .no-scroll {
+        overflow: hidden;
       }
 
       .search-item {
         transition: transform 0.3s ease;
+        background-color: #f5f5f5; /* Warm White/Cream */
       }
 
       .search-item:hover {
         transform: translateY(-5px);
+        box-shadow: 0 4px 12px rgba(85, 107, 47, 0.2); /* Olive Green shadow */
       }
 
       .modal {
@@ -33,12 +42,12 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(0, 0, 0, 0.5);
+        background: rgba(114, 47, 55, 0.5); /* Deep Burgundy with opacity */
         z-index: 1000;
       }
 
       .modal-content {
-        background: white;
+        background: #f5f5f5; /* Warm White/Cream */
         padding: 2rem;
         border-radius: 1rem;
         max-width: 800px;
@@ -56,18 +65,33 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background: rgba(0, 0, 0, 0.5);
+        background: rgba(114, 47, 55, 0.8); /* Deep Burgundy with opacity */
         display: flex;
         align-items: center;
         justify-content: center;
-        color: white;
+        color: #fffaf0; /* Warm White/Cream */
         font-size: 1.5rem;
         cursor: pointer;
+        z-index: 10;
+      }
+
+      .lock-overlay::after {
+        content: " Unlock to view";
+      }
+
+      .filter-btn {
+        background-color: #f5f5f5; /* Warm White/Cream */
+        color: #722f37; /* Deep Burgundy */
       }
 
       .filter-btn.active {
-        background-color: #4f46e5;
-        color: white;
+        background-color: #e27d60; /* Soft Terracotta */
+        color: #fffaf0; /* Warm White/Cream */
+      }
+
+      .filter-btn:hover {
+        background-color: #722f37; /* Deep Burgundy */
+        color: #fffaf0; /* Warm White/Cream */
       }
 
       #mobileMenu {
@@ -88,7 +112,6 @@
           opacity: 0;
           transform: translateY(-10px);
         }
-
         to {
           opacity: 1;
           transform: translateY(0);
@@ -99,85 +122,60 @@
 
   <body class="bg-gray-50">
     <!-- Navigation -->
-    <nav class="bg-white shadow-md">
+     <nav class="bg-white shadow-md">
       <div class="container mx-auto px-4">
         <div class="flex justify-between items-center h-16">
           <div class="flex items-center">
-            <a href="index.html" class="text-xl font-bold text-indigo-600"
-              >Food Menu</a
+            <a
+              href="./"
+              class="text-xl font-bold text-[#722F37] flex items-center gap-2" /* Deep Burgundy */
             >
+              <i class="fas fa-utensils"></i>
+              <span>Food Menu</span>
+            </a>
           </div>
-          <!-- Mobile menu button -->
-          <button
-            id="mobileMenuButton"
-            class="md:hidden p-2 rounded-lg hover:bg-gray-100"
-          >
-            <i class="fas fa-bars text-xl"></i>
-          </button>
           <!-- Desktop Navigation -->
-          <div class="hidden md:flex space-x-8">
-            <a href="food.html" class="text-gray-700 hover:text-indigo-600"
-              >Food</a
-            >
-            <a href="drinks.html" class="text-gray-700 hover:text-indigo-600"
-              >Drinks</a
-            >
-            <a href="recipes.html" class="text-gray-700 hover:text-indigo-600"
-              >Recipes</a
-            >
-            <a href="search.html" class="text-gray-700 hover:text-indigo-600">
-              <i class="fas fa-search"></i> Search
-            </a>
-          </div>
-          <div class="flex items-center space-x-4">
-            <button
-              id="themeToggle"
-              class="p-2 rounded-full hover:bg-gray-100 hidden"
-            >
-              <i class="fas fa-moon"></i>
-            </button>
-            <a
-              href="cart.html"
-              id="cartButton"
-              class="relative p-2 rounded-full hover:bg-gray-100"
-            >
-              <i class="fas fa-shopping-cart"></i>
-              <span
-                id="cartCount"
-                class="absolute -top-1 -right-1 bg-red-500 text-white rounded-full w-5 h-5 flex items-center justify-center text-xs"
-                >0</span
-              >
-            </a>
-            <a
-              href="search.html"
-              class="text-gray-700 hover:text-indigo-600 md:hidden"
-            >
-              <i class="fas fa-search"></i>
-            </a>
-          </div>
-        </div>
-        <!-- Mobile Navigation Menu -->
-        <div id="mobileMenu" class="md:hidden hidden">
-          <div class="px-2 pt-2 pb-3 space-y-1">
+          <div class="hidden md:flex space-x-8 desktop-nav">
             <a
               href="food.html"
-              class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-indigo-600 hover:bg-gray-50"
+              class="text-[#556B2F] hover:text-[#E27D60] transition-colors" /* Olive Green to Soft Terracotta */
               >Food</a
             >
             <a
               href="drinks.html"
-              class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-indigo-600 hover:bg-gray-50"
+              class="text-[#556B2F] hover:text-[#E27D60] transition-colors" /* Olive Green to Soft Terracotta */
               >Drinks</a
             >
             <a
               href="recipes.html"
-              class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-indigo-600 hover:bg-gray-50"
+              class="text-[#556B2F] hover:text-[#E27D60] transition-colors" /* Olive Green to Soft Terracotta */
               >Recipes</a
             >
+            <a
+              href="search.html"
+              class="text-[#556B2F] hover:text-[#E27D60] transition-colors" /* Olive Green to Soft Terracotta */
+            >
+              <i class="fas fa-search"></i> Search
+            </a>
+          </div>
+          <div class="flex items-center space-x-4">
+            <a
+              href="cart.html"
+              id="cartButton"
+              class="relative p-2 rounded-full hover:bg-[#E27D60] hover:text-[#FFFAF0] transition-colors" /* Soft Terracotta on hover */
+            >
+              <i class="fas fa-shopping-cart"></i>
+              <span
+                id="cartCount"
+                class="absolute -top-1 -right-1 bg-[#722F37] text-[#FFFAF0] rounded-full w-5 h-5 flex items-center justify-center text-xs" /* Deep Burgundy with Warm White text */
+                >0</span
+              >
+            </a>
           </div>
         </div>
       </div>
     </nav>
+
 
     <!-- Main Content -->
     <main class="container mx-auto px-4 py-12">
@@ -189,7 +187,11 @@
           <input
             type="text"
             id="searchInput"
-            class="w-full px-4 py-3 rounded-lg border focus:outline-none focus:ring-2 focus:ring-indigo-500"
+            name="anything"
+            readonly
+            onfocus="this.removeAttribute('readonly');"
+            autocomplete="off"
+            class="w-full px-4 py-3 rounded-lg border focus:outline-none focus:ring-2 focus:ring-[#E27D60] focus:border-[#E27D60]"
             placeholder="Search for food, drinks, or recipes..."
           />
           <button
@@ -245,18 +247,27 @@
     </main>
 
     <!-- Item Detail Modal -->
-    <div id="itemDetailModal" class="modal">
-      <div class="modal-content">
-        <div class="flex justify-between items-start mb-4">
+    <div
+      id="itemDetailModal"
+      class="modal hidden flex items-center justify-center"
+    >
+      <div
+        class="modal-content relative w-full h-full max-w-lg overflow-hidden flex flex-col"
+      >
+        <div
+          class="flex justify-between items-start p-4 border-b flex-shrink-0 mb-4"
+        >
           <h3 class="text-2xl font-bold" id="detailTitle"></h3>
           <button
             id="closeDetailModal"
-            class="text-gray-500 hover:text-gray-700"
+            class="text-[#556B2F] hover:text-[#E27D60]"
           >
             <i class="fas fa-times text-xl"></i>
           </button>
         </div>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+        <div
+          class="flex-1 overflow-y-auto p-4 grid grid-cols-1 md:grid-cols-2 gap-6"
+        >
           <div>
             <img
               id="detailImage"
@@ -267,59 +278,71 @@
             <div class="mt-4">
               <span
                 id="detailCategory"
-                class="inline-block px-3 py-1 bg-indigo-100 text-indigo-800 rounded-full text-sm"
+                class="inline-block px-2 py-1 bg-[#E27D60] text-[#FFFAF0] rounded-full text-sm"
               ></span>
-              <span id="detailPrice" class="ml-2 text-lg font-semibold"></span>
+              <span
+                id="detailPrice"
+                class="text-xl font-bold text-[#E27D60]"
+              ></span>
             </div>
           </div>
           <div>
             <p id="detailDescription" class="text-gray-600 mb-4"></p>
             <div id="detailIngredients" class="mb-4">
-              <h4 class="font-semibold mb-2">Ingredients:</h4>
+              <h4 class="font-semibold mb-1 text-[#722F37]">Ingredients:</h4>
               <ul
                 id="ingredientsList"
-                class="list-disc list-inside text-gray-600"
+                class="list-disc list-inside text-[#556B2F]"
               ></ul>
             </div>
             <div id="detailInstructions" class="mb-4">
               <h4 class="font-semibold mb-2">Instructions:</h4>
               <p id="instructionsText" class="text-gray-600"></p>
             </div>
-            <button
-              id="addToCartBtn"
-              class="w-full px-4 py-2 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 transition-colors"
-            >
-              Add to Cart
-            </button>
           </div>
         </div>
-      </div>
-    </div>
-
-    <!-- Password Modal -->
-    <div id="passwordModal" class="modal">
-      <div class="modal-content max-w-md">
-        <h3 class="text-xl font-bold mb-4">Enter Password</h3>
-        <input
-          type="password"
-          id="passwordInput"
-          class="w-full p-2 border rounded mb-4"
-          placeholder="Enter password"
-        />
-        <div class="flex justify-end space-x-4">
-          <button id="cancelPassword" class="px-4 py-2 bg-gray-200 rounded">
-            Cancel
-          </button>
+        <div
+          class="p-4 border-t bg-[#F5F5F5] flex-shrink-0 sticky bottom-0 z-10"
+        >
           <button
-            id="submitPassword"
-            class="px-4 py-2 bg-indigo-600 text-white rounded"
+            id="addToCartBtn"
+            class="w-full px-4 py-2 bg-[#E27D60] text-[#FFFAF0] rounded-lg hover:bg-indigo-700 transition-colors"
           >
-            Submit
+            Add to Cart
           </button>
         </div>
       </div>
     </div>
 
+    <div class="flex lg:hidden h-28"></div>
+
+    <!-- Bottom Navigation -->
+    <div class="bottom-nav">
+      <a href="food.html" class="bottom-nav-item" tabindex="0">
+        <div class="nav-icon-wrapper">
+          <i class="fas fa-utensils"></i>
+        </div>
+        <span>Food</span>
+      </a>
+      <a href="drinks.html" class="bottom-nav-item" tabindex="0">
+        <div class="nav-icon-wrapper">
+          <i class="fas fa-cocktail"></i>
+        </div>
+        <span>Drinks</span>
+      </a>
+      <a href="cart.html" class="bottom-nav-item" tabindex="0">
+        <div class="nav-icon-wrapper">
+          <i class="fas fa-shopping-cart"></i>
+        </div>
+        <span>Cart</span>
+      </a>
+      <a href="search.html" class="bottom-nav-item active" tabindex="0">
+        <div class="nav-icon-wrapper">
+          <i class="fas fa-search"></i>
+        </div>
+        <span>Search</span>
+      </a>
+    </div>
     <script>
       // Sample data (in a real application, this would come from your backend)
       const menuData = {
@@ -1007,7 +1030,7 @@
       };
 
       // Password for locked content
-      const LOCK_PASSWORD = "secret123";
+      const LOCK_PASSWORD = "ibiza";
 
       // Cart functionality
       let cart = JSON.parse(localStorage.getItem("cart")) || [];
@@ -1098,9 +1121,9 @@
             .map((ingredient) => {
               const searchQuery = encodeURIComponent(ingredient);
               return `<li>
-                        <a href="https://www.google.com/search?q=${searchQuery}&tbm=isch"
-                           target="_blank"
-                           class="text-indigo-600 hover:text-indigo-800 transition-colors duration-200">
+                        <a href="https://www.google.com/search?q=${searchQuery}&tbm=isch" 
+                           target="_blank" 
+                           class="text-[#E27D60] hover:text-[#722F37]">
                             ${ingredient}
                         </a>
                     </li>`;
@@ -1211,14 +1234,14 @@
                     <div class="p-6 ${item.locked ? "locked-content" : ""}">
                         <div class="flex justify-between items-start mb-2">
                             <h3 class="text-xl font-semibold">${item.name}</h3>
-                            <span class="px-2 py-1 bg-indigo-100 text-indigo-800 rounded-full text-sm">${
+                            <span class="px-2 py-1 bg-[#E27D60] text-[#FFFAF0] rounded-full text-sm">${
                               item.category
                             }</span>
                         </div>
                         <p class="text-gray-600 mb-4">${item.description}</p>
                         ${
                           item.price
-                            ? `<p class="text-lg font-semibold mb-4">฿${item.price.toFixed(
+                            ? `<p class="text-[#E27D60] font-bold mb-2">฿${item.price.toFixed(
                                 2
                               )}</p>`
                             : ""
@@ -1229,7 +1252,7 @@
                                 Unlock
                             </button>`
                             : item.price
-                            ? `<button class="w-full px-4 py-2 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 transition-colors" onclick="event.stopPropagation(); addToCart(${JSON.stringify(
+                            ? `<button class=" px-4 py-2 bg-[#E27D60] text-[#FFFAF0] rounded hover:bg-[#722F37] transition-colors add-to-cart" onclick="event.stopPropagation(); addToCart(${JSON.stringify(
                                 item
                               ).replace(/"/g, "&quot;")})">
                                     Add to Cart
@@ -1281,33 +1304,6 @@
         });
       });
 
-      // Password modal handlers
-      document
-        .getElementById("cancelPassword")
-        .addEventListener("click", () => {
-          document.getElementById("passwordModal").style.display = "none";
-          document.getElementById("passwordInput").value = "";
-        });
-
-      document
-        .getElementById("submitPassword")
-        .addEventListener("click", () => {
-          const password = document.getElementById("passwordInput").value;
-          if (password === LOCK_PASSWORD) {
-            // Unlock content
-            document.querySelectorAll(".locked-content").forEach((content) => {
-              content.classList.remove("locked-content");
-            });
-            document.querySelectorAll(".lock-overlay").forEach((overlay) => {
-              overlay.style.display = "none";
-            });
-            document.getElementById("passwordModal").style.display = "none";
-            document.getElementById("passwordInput").value = "";
-          } else {
-            alert("Invalid password");
-          }
-        });
-
       // Close detail modal
       document
         .getElementById("closeDetailModal")
@@ -1324,14 +1320,6 @@
             modal.style.display = "none";
           }
         });
-      });
-
-      // Theme toggle
-      document.getElementById("themeToggle").addEventListener("click", () => {
-        document.body.classList.toggle("dark");
-        const icon = document.querySelector("#themeToggle i");
-        icon.classList.toggle("fa-moon");
-        icon.classList.toggle("fa-sun");
       });
 
       // Initialize with empty search
