--- a/cart.html
+++ b/cart.html
@@ -383,6 +383,8 @@
                 >0</span
               >
             </a>
+    <div id="google_translate_element"></div>
+
           </div>
         </div>
       </div>
@@ -525,6 +527,15 @@
         <span>Search</span>
       </a>
     </div>
+
+
+    <script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
     <script>
       let cart = JSON.parse(localStorage.getItem("cart")) || [];
