--- a/drinks.html
+++ b/drinks.html
@@ -173,6 +173,8 @@
                 >0</span
               >
             </a>
+    <div id="google_translate_element"></div>
+
           </div>
         </div>
       </div>
@@ -339,6 +341,13 @@
         <span>Search</span>
       </a>
     </div>
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
     <script type="module">
       import { drinksData } from "./data/drinks_data.js";
