--- a/food.html
+++ b/food.html
@@ -122,6 +122,8 @@
                 >0</span
               >
             </a>
+    <div id="google_translate_element"></div>
+
           </div>
         </div>
       </div>
@@ -279,6 +281,13 @@
         <span>Search</span>
       </a>
     </div>
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
     <script type="module">
       import { foodData } from "./data/foods_data.js";
