--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
                 >0</span
               >
             </a>
+    <div id="google_translate_element"></div>
+ 
           </div>
         </div>
       </div>
@@ -332,6 +334,14 @@
         <span>Search</span>
       </a>
     </div>
+    <script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
     <script>
       // Cart initialization
       let cart = JSON.parse(localStorage.getItem("cart")) || [];
