--- a/recipes.html
+++ b/recipes.html
@@ -179,6 +179,8 @@
                 >0</span
               >
             </a>
+    <div id="google_translate_element"></div>
+
           </div>
         </div>
       </div>
@@ -329,6 +331,13 @@
         <span>Search</span>
       </a>
     </div>
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
     <script type="module">
       import { recipesData } from "./data/recipes_data.js";
