--- a/search.html
+++ b/search.html
@@ -171,6 +171,8 @@
                 >0</span
               >
             </a>
+    <div id="google_translate_element"></div>
+
           </div>
         </div>
       </div>
@@ -343,6 +345,14 @@
         <span>Search</span>
       </a>
     </div>
+    <script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
     <script>
       // Sample data (in a real application, this would come from your backend)
       const menuData = {
