--- a/cart.html
+++ b/cart.html
@@ -307,6 +307,47 @@
           transform: translateY(0);
         }
       }
+
+      /* Google Translate Styling */
+      .translate-container {
+        max-width: 150px;
+      }
+      #google_translate_element select {
+        background: #fffaf0;
+        color: #556b2f;
+        border: 1px solid #e27d60;
+        border-radius: 0.5rem;
+        padding: 0.25rem 1.5rem 0.25rem 0.5rem;
+        font-family: "Poppins", sans-serif;
+        font-size: 0.875rem;
+        width: 100%;
+        appearance: none;
+        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="%23722F37" stroke-width="2"><polyline points="6 9 12 15 18 9"></polyline></svg>');
+        background-repeat: no-repeat;
+        background-position: right 0.5rem center;
+        transition: all 0.3s ease;
+      }
+      #google_translate_element select:focus {
+        outline: none;
+        border-color: #722f37;
+        box-shadow: 0 0 0 2px rgba(226, 125, 96, 0.2);
+      }
+      .goog-te-banner-frame,
+      .goog-te-menu-frame {
+        display: none !important;
+      }
+
+      /* Mobile Adjustments */
+      @media (max-width: 640px) {
+        .translate-container {
+          max-width: 100px;
+        }
+        #google_translate_element select {
+          font-size: 0.75rem;
+          padding: 0.25rem 1.25rem 0.25rem 0.375rem;
+          background-position: right 0.25rem center;
+        }
+      }
     </style>
   </head>
 
@@ -362,7 +403,9 @@
                 >0</span
               >
             </a>
-            <div id="google_translate_element"></div>
+            <div class="translate-container">
+              <div id="google_translate_element"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -436,7 +479,7 @@
         <i class="fas fa-shopping-cart text-6xl mb-4 text-[#722F37]"></i>
         <p class="text-xl">Your cart is empty</p>
         <a
-          href="index.html"
+          href="./"
           class="mt-4 inline-block px-6 py-3 bg-[#E27D60] text-[#FFFAF0] rounded-lg hover:bg-[#722F37] transition-colors"
         >
           Continue Shopping
@@ -532,7 +575,10 @@
     <script type="text/javascript">
       function googleTranslateElementInit() {
         new google.translate.TranslateElement(
-          { pageLanguage: "en" },
+          {
+            pageLanguage: "en",
+            layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+          },
           "google_translate_element"
         );
       }
